Update SDS server for incremental upload
The server can now accept incremental updates. However, old uploads are not possible anymore. Repositories need to be rebuilt after upgrading to this new SDS version.